--- a/MotionModeling.csproj
+++ b/MotionModeling.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +47,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,17 +66,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormBullet.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormBullet.Designer.cs">
+      <DependentUpon>FormBullet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPendulum.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPendulum.Designer.cs">
+      <DependentUpon>FormPendulum.cs</DependentUpon>
     </Compile>
     <Compile Include="FormPolarChart.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormPolarChart.Designer.cs">
       <DependentUpon>FormPolarChart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProjectile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProjectile.Designer.cs">
+      <DependentUpon>FormProjectile.cs</DependentUpon>
     </Compile>
     <Compile Include="FormRectangularChart.cs">
       <SubType>Form</SubType>
@@ -67,11 +98,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormStart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormStart.Designer.cs">
+      <DependentUpon>FormStart.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FormBullet.resx">
+      <DependentUpon>FormBullet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPendulum.resx">
+      <DependentUpon>FormPendulum.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPolarChart.resx">
       <DependentUpon>FormPolarChart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProjectile.resx">
+      <DependentUpon>FormProjectile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRectangularChart.resx">
       <DependentUpon>FormRectangularChart.cs</DependentUpon>
@@ -85,6 +128,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FormStart.resx">
+      <DependentUpon>FormStart.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -97,6 +143,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
